--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -57,7 +57,7 @@
 						android:layout_weight="2.0"
 						android:gravity="center"
 						android:text="Текст"
-						android:textColor="#fffadbd6"
+						android:textColor="#FFFFFF"
 						android:textSize="8.0sp"/>
 
 					<TextView
@@ -66,7 +66,7 @@
 						android:layout_weight="3.0"
 						android:gravity="center"
 						android:text="Время выйдет через"
-						android:textColor="#fffadbd6"
+						android:textColor="#FFFFFF"
 						android:textSize="9.0sp"/>
 
 					<TextView
@@ -77,7 +77,7 @@
 						android:gravity="center"
 						android:paddingTop="2.0dip"
 						android:text="Текст"
-						android:textColor="#ffded0de"
+						android:textColor="#FFFFFF"
 						android:textSize="16.0sp"/>
 
 				</LinearLayout>
@@ -117,7 +117,7 @@
 						android:layout_weight="2.0"
 						android:gravity="center"
 						android:text="Текст"
-						android:textColor="#fffadbd6"
+						android:textColor="#FFFFFF"
 						android:textSize="8.0sp"/>
 
 					<TextView
@@ -126,7 +126,7 @@
 						android:layout_weight="3.0"
 						android:gravity="center"
 						android:text="Время выйдет через"
-						android:textColor="#fffadbd6"
+						android:textColor="#FFFFFF"
 						android:textSize="9.0sp"/>
 
 					<TextView
@@ -137,7 +137,7 @@
 						android:gravity="center"
 						android:paddingTop="2.0dip"
 						android:text="Текст"
-						android:textColor="#ffded0de"
+						android:textColor="#FFFFFF"
 						android:textSize="16.0sp"/>
 
 				</LinearLayout>
