--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -3,7 +3,7 @@
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent"
 	android:layout_height="fill_parent"
-	android:background="#ff00b0ff"
+	android:background="#FF851016"
 	android:gravity="center"
 	android:orientation="vertical"
 	android:weightSum="15.0">
@@ -47,7 +47,7 @@
 						android:gravity="center"
 						android:paddingTop="3.0dip"
 						android:text="Оплата будет повышена"
-						android:textColor="#FF0F00"
+						android:textColor="#FFD89660"
 						android:textSize="9.0sp"/>
 
 					<TextView
@@ -57,7 +57,7 @@
 						android:layout_weight="2.0"
 						android:gravity="center"
 						android:text="Текст"
-						android:textColor="#FFFFFF"
+						android:textColor="#FFFADBD6"
 						android:textSize="8.0sp"/>
 
 					<TextView
@@ -66,7 +66,7 @@
 						android:layout_weight="3.0"
 						android:gravity="center"
 						android:text="Время выйдет через"
-						android:textColor="#FFFFFF"
+						android:textColor="#FFFADBD6"
 						android:textSize="9.0sp"/>
 
 					<TextView
@@ -77,7 +77,7 @@
 						android:gravity="center"
 						android:paddingTop="2.0dip"
 						android:text="Текст"
-						android:textColor="#FFFFFF"
+						android:textColor="#FFDED0DE"
 						android:textSize="16.0sp"/>
 
 				</LinearLayout>
@@ -107,7 +107,7 @@
 						android:gravity="center"
 						android:paddingTop="3.0dip"
 						android:text="Ваши файлы будут потеряны"
-						android:textColor="#FF0F00"
+						android:textColor="#FFD89660"
 						android:textSize="9.0sp"/>
 
 					<TextView
@@ -117,7 +117,7 @@
 						android:layout_weight="2.0"
 						android:gravity="center"
 						android:text="Текст"
-						android:textColor="#FFFFFF"
+						android:textColor="#FFFADBD6"
 						android:textSize="8.0sp"/>
 
 					<TextView
@@ -126,7 +126,7 @@
 						android:layout_weight="3.0"
 						android:gravity="center"
 						android:text="Время выйдет через"
-						android:textColor="#FFFFFF"
+						android:textColor="#FFFADBD6"
 						android:textSize="9.0sp"/>
 
 					<TextView
@@ -137,7 +137,7 @@
 						android:gravity="center"
 						android:paddingTop="2.0dip"
 						android:text="Текст"
-						android:textColor="#FFFFFF"
+						android:textColor="#FFDED0DE"
 						android:textSize="16.0sp"/>
 
 				</LinearLayout>
@@ -157,7 +157,7 @@
 				android:layout_height="wrap_content"
 				android:gravity="center"
 				android:text="Ваши файлы были зашифрованы!"
-				android:textColor="#FFFFFF"/>
+				android:textColor="#FFFADBD6"/>
 
 			<ScrollView
 				android:layout_width="fill_parent"
@@ -212,25 +212,9 @@
 						android:textSize="13.0sp"/>
 
 					<TextView
-						android:id="@+id/bt4"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="20.0dip"
-						android:textColor="#000000"
-						android:textSize="16.0sp"/>
-
-					<TextView
 						android:id="@+id/nr4"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:textColor="#ff323131"
-						android:textSize="13.0sp"/>
-
-					<TextView
-						android:id="@+id/nr5"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginTop="20.0dip"
 						android:textColor="#ffff0f00"
 						android:textSize="13.0sp"/>
 
@@ -265,23 +249,11 @@
 				android:orientation="horizontal">
 
 				<TextView
-					android:id="@+id/lx"
+					android:id="@+id/lapm"
 					android:layout_width="match_parent"
 					android:layout_height="fill_parent"
-					android:layout_marginLeft="3.0dip"
-					android:text="Свяжитесь с нами"
-					android:textColor="#0048FF"
-					android:textSize="14.0sp"
-					android:layout_weight="1"
-					android:gravity="center"/>
-
-				<TextView
-					android:id="@+id/jr"
-					android:layout_width="match_parent"
-					android:layout_height="fill_parent"
-					android:layout_marginLeft="10.0dip"
-					android:text="Присоединяйтесь к нам"
-					android:textColor="#0048FF"
+					android:text="Узнать способы оплаты"
+					android:textColor="#ff5ea9ba"
 					android:textSize="14.0sp"
 					android:layout_weight="1"
 					android:gravity="center"/>
@@ -294,7 +266,7 @@
 				android:layout_height="wrap_content"
 				android:layout_weight="1.0"
 				android:gravity="center"
-				android:textColor="#12FF00"
+				android:textColor="#FFD89660"
 				android:textSize="11.0sp"/>
 
 			<LinearLayout
@@ -304,8 +276,7 @@
 				android:layout_weight="2.0"
 				android:background="@drawable/lock_icon_bg"
 				android:gravity="center"
-				android:orientation="horizontal"
-				android:weightSum="10.0">
+				android:orientation="horizontal">
 
 				<TextView
 					android:id="@+id/wb"
@@ -314,7 +285,8 @@
 					android:layout_weight="6.0"
 					android:background="@drawable/lock_icon_bg"
 					android:gravity="center"
-					android:textSize="12.0sp"/>
+					android:textSize="12.0sp"
+					android:textColor="#FFFADBD6"/>
 
 				<Button
 					android:id="@+id/fz"
@@ -325,24 +297,13 @@
 					android:textAllCaps="false"
 					android:textSize="10.0sp"/>
 
-				<Button
-					android:id="@+id/check_payment_button"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_weight="2.0"
-					android:text="Проверить оплату"
-					android:textAllCaps="false"
-					android:textSize="10.0sp"/>
-
 			</LinearLayout>
 
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginBottom="3.0dip"
 				android:layout_weight="2.0"
 				android:orientation="horizontal"
-				android:weightSum="10.0"
 				android:gravity="center">
 
 				<EditText
@@ -354,7 +315,9 @@
 					android:focusable="false"
 					android:hint="Пожалуйста, введите свой ключ!"
 					android:maxLength="50"
-					android:textSize="13.0sp"/>
+					android:textSize="13.0sp"
+					android:textColor="#FFFADBD6"
+					android:textColorHint="#FFFADBD6"/>
 
 				<Button
 					android:id="@+id/bt"
@@ -362,7 +325,7 @@
 					android:layout_height="wrap_content"
 					android:layout_weight="3.0"
 					android:enabled="false"
-					android:text="Невозможно расшифровать"
+					android:text="Расшифровать"
 					android:textAllCaps="false"
 					android:textSize="10.0sp"/>
 
